traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:7: error: illegal start of simple expression
  }
  ^